--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header id="main-header">
   <nav class="navbar">
-    <img src="images/logo.png" alt="Readify" class="logo" width="60" height="60" loading="eager" fetchpriority="high">
+    <img src="images/logo.png" alt="Readify" class="logo" width="60" height="60">
 
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
@@ -51,7 +51,7 @@
   <h2>Author of the Day</h2>
 
   <div class="author-card">
-    <img src="images/Ayn_Rand.jpg" alt="" id="author-img" width="160" height="160" decoding="async" loading="lazy">
+    <img src="images/Ayn_Rand.jpg" alt="" id="author-img" width="160" height="160">
     <h3 id="author-name">Loading...</h3>
     <p id="author-bio">Loading author information...</p>
   </div>
@@ -83,3 +83,4 @@
 <script defer src="js/homepage.js"></script>
 </body>
 </html>
+
