--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header id="main-header">
   <nav class="navbar">
-    <img src="images/logo.png" alt="Readify" class="logo" width="60" height="60">
+    <img src="images/logo.png" alt="Readify" class="logo" width="60" height="60" >
 
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="hero-image">
-      <img src="images/home.png" alt="Illustration of a person reading among books" width="500" height="475" loading="eager" fetchpriority="high">
+      <img src="images/home.png" alt="Illustration of a person reading among books" width="500" height="475">
     </div>
 
   </section>
@@ -51,7 +51,7 @@
   <h2>Author of the Day</h2>
 
   <div class="author-card">
-    <img src="images/Ayn_Rand.jpg" alt="" id="author-img" width="160" height="160">
+    <img src="images/Ayn_Rand.jpg" alt="" id="author-img" width="160" height="160" decoding="async" loading="lazy">
     <h3 id="author-name">Loading...</h3>
     <p id="author-bio">Loading author information...</p>
   </div>
@@ -83,4 +83,3 @@
 <script defer src="js/homepage.js"></script>
 </body>
 </html>
-
