--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <h2>Author of the Day</h2>
 
   <div class="author-card">
-    <img src="images/Ayn_Rand.jpg" alt="" id="author-img" width="160" height="160" decoding="async" loading="lazy">
+    <img id="author-img" alt="" width="160" height="160" decoding="async" loading="lazy">
     <h3 id="author-name">Loading...</h3>
     <p id="author-bio">Loading author information...</p>
   </div>
